--- a/source/form.html
+++ b/source/form.html
@@ -6,7 +6,7 @@
     <title>HTML Academy: Седона. Форма обратной связи</title>
     <meta name="keywords" content="[SEO]">
     <meta name="description" content="[SEO]">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
 
     <script>
       // Picture element HTML5 shiv
@@ -27,7 +27,7 @@
                   <source media="(min-width: 1200px)" srcset="./img/logo-sedona-desktop.svg">
                   <source media="(min-width: 768px)" srcset="./img/logo-sedona-tablet.svg">
                   <img src="./img/logo-sedona-mobile.svg"
-                    width="102"
+                    width="102" height="84"
                     alt="City of SEDONA (LOGO)">
                 </picture>
               </a>
@@ -36,20 +36,15 @@
             <li class="site-nav__item"><a href="https://htmlacademy.ru/" target="_blank">HTML Academy</a></li>
           </ul>
 
-          <button class="site-nav__toggler" type="button">
-            <span class="site-nav__toggler-inner">
-              <span class="site-nav__toggler-line"></span>
-              <span class="site-nav__toggler-line"></span>
-              <span class="site-nav__toggler-line"></span>
-            </span>
-
-            <span class="visually-hidden">Открыть/Закрыть меню сайта</span>
+          <button class="site-nav__toggler" type="button" aria-label="Открыть/Закрыть меню сайта">
+            <span class="site-nav__toggler-line"></span>
           </button>
         </nav>
 
         <div class="site-banner-small">
           <img src="./img/text-sedona.svg"
             class="site-banner-small__content"
+            width="229" height="40"
             alt="Welcome to the gorgeous Sedona!">
         </div>
       </header>
@@ -120,20 +115,17 @@
 
             <div class="radio-input-list">
               <div class="switch-input  switch-input--radio  radio-input-list__item">
-                <input type="radio" name="score" value="1" checked
-                  id="feedback-form__score-1">
+                <input class="visually-hidden" type="radio" name="score" value="1" checked id="feedback-form__score-1">
                 <label for="feedback-form__score-1">Скорее положительное</label>
               </div>
 
               <div class="switch-input  switch-input--radio  radio-input-list__item">
-                <input type="radio" name="score" value="2"
-                  id="feedback-form__score-2">
+                <input class="visually-hidden" type="radio" name="score" value="2" id="feedback-form__score-2">
                 <label for="feedback-form__score-2">Скорее отрицательное</label>
               </div>
 
               <div class="switch-input  switch-input--radio  radio-input-list__item">
-                <input type="radio" name="score" value="3"
-                  id="feedback-form__score-3">
+                <input class="visually-hidden" type="radio" name="score" value="3" id="feedback-form__score-3">
                 <label for="feedback-form__score-3">Затрудняюсь ответить</label>
               </div>
             </div>
@@ -146,26 +138,25 @@
 
             <div class="checkbox-input-list">
               <div class="switch-input  switch-input--checkbox  checkbox-input-list__item">
-                <input type="checkbox" name="place" value="1" checked
+                <input class="visually-hidden" type="checkbox" name="place[]" value="1" checked
                   id="feedback-form__place-1">
                 <label for="feedback-form__place-1">Мост Дьявола</label>
               </div>
 
               <div class="switch-input  switch-input--checkbox  checkbox-input-list__item">
-                <input type="checkbox" name="place" value="2" checked
+                <input class="visually-hidden" type="checkbox" name="place[]" value="2" checked
                   id="feedback-form__place-2">
                 <label for="feedback-form__place-2">Гора-Колокол</label>
               </div>
 
               <div class="switch-input  switch-input--checkbox  checkbox-input-list__item">
-                <input type="checkbox" name="place" value="3" checked
+                <input class="visually-hidden" type="checkbox" name="place[]" value="3" checked
                   id="feedback-form__place-3">
                 <label for="feedback-form__place-3">Слайд-парк</label>
               </div>
 
               <div class="switch-input  switch-input--checkbox  checkbox-input-list__item">
-                <input type="checkbox" name="place" value="4"
-                  id="feedback-form__place-4">
+                <input class="visually-hidden" type="checkbox" name="place[]" value="4" id="feedback-form__place-4">
                 <label for="feedback-form__place-4">Красные скалы</label>
               </div>
             </div>
@@ -224,8 +215,8 @@
             href="https://htmlacademy.ru/intensive/adaptive"
             aria-label="HtmlAcademy"
           >
-            <svg width="26.943px" height="34.09px">
-              <use xlink:href='./img/sprite.svg#htmlacademy-logo'/>
+            <svg width="27px" height="34px">
+              <use xlink:href='./img/sprite.svg#icon-logo-htmlacademy'/>
             </svg>
           </a>
         </div>
