--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
     <title>HTML Academy: Седона</title>
     <meta name="keywords" content="[SEO]">
     <meta name="description" content="[SEO]">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
 
     <script>
       // Picture element HTML5 shiv
@@ -27,7 +27,7 @@
                   <source media="(min-width: 1200px)" srcset="./img/logo-sedona-desktop.svg">
                   <source media="(min-width: 768px)" srcset="./img/logo-sedona-tablet.svg">
                   <img src="./img/logo-sedona-mobile.svg"
-                    width="102"
+                    width="102" height="84"
                     alt="City of SEDONA (LOGO)">
                 </picture>
               </a>
@@ -36,19 +36,14 @@
             <li class="site-nav__item"><a href="https://htmlacademy.ru/" target="_blank">HTML Academy</a></li>
           </ul>
 
-          <button class="site-nav__toggler" type="button">
-            <span class="site-nav__toggler-inner">
-              <span class="site-nav__toggler-line"></span>
-              <span class="site-nav__toggler-line"></span>
-              <span class="site-nav__toggler-line"></span>
-            </span>
-
-            <span class="visually-hidden">Открыть/Закрыть меню сайта</span>
+          <button class="site-nav__toggler" type="button" aria-label="Открыть/Закрыть меню сайта">
+            <span class="site-nav__toggler-line"></span>
           </button>
         </nav>
 
         <div class="site-banner-big">
           <img src="./img/text-sedona-index.svg"
+            width="281" height="314"
             class="site-banner-big__content"
             alt="Welcome to the gorgeous Sedona! Because the Grand Canyon Sucks">
         </div>
@@ -119,7 +114,7 @@
             <li class="small-city-benefits__item  small-city-benefits__item--food">
               <b class="small-city-benefits__item-title">Еда</b>
               <p class="small-city-benefits__item-desc">
-                Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!
+                Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, <br class="mobile-hidden">Вы НЕ разочаруетесь!
               </p>
             </li>
           </ul>
@@ -173,7 +168,7 @@
             <span class="advantage__number">– №4 –</span>
 
             <p class="advantage__desc">
-              Ехать в&nbsp;седону из Лас-Вегаса
+              Ехать в&nbsp;седону из <br class="only-tablet">Лас-Вегаса
               <br class="only-mobile">совсем НЕ&nbsp;СКУЧНО!
             </p>
           </section>
@@ -230,7 +225,7 @@
           </a>
 
           <a class="social-links__item"
-            href="https://www.youtube.com/watch?v=HU22peKtyfY" target="_blank">
+            href="https://www.youtube.com/watch?v=HU22peKtyfY" target="_blank" aria-label="YouTube">
             <svg width="20" height="14">
               <use xlink:href='./img/sprite.svg#icon-youtube'/>
             </svg>
@@ -243,8 +238,8 @@
             href="https://htmlacademy.ru/intensive/adaptive"
             aria-label="HtmlAcademy"
           >
-            <svg width="26.943px" height="34.09px">
-              <use xlink:href='./img/sprite.svg#htmlacademy-logo'/>
+            <svg width="27px" height="34px">
+              <use xlink:href='./img/sprite.svg#icon-logo-htmlacademy'/>
             </svg>
           </a>
         </div>
