--- a/source/form.html
+++ b/source/form.html
@@ -24,9 +24,9 @@
             <li class="site-nav__item  site-nav__item--site-logo">
               <a href="index.html">
                 <picture>
-                  <source media="(min-width: 1200px)" srcset="./img/logo-sedona-desktop.svg">
-                  <source media="(min-width: 768px)" srcset="./img/logo-sedona-tablet.svg">
-                  <img src="./img/logo-sedona-mobile.svg"
+                  <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+                  <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+                  <img src="img/logo-sedona-mobile.svg"
                     width="102" height="84"
                     alt="City of SEDONA (LOGO)">
                 </picture>
@@ -42,7 +42,7 @@
         </nav>
 
         <div class="site-banner-small">
-          <img src="./img/text-sedona.svg"
+          <img src="img/text-sedona.svg"
             class="site-banner-small__content"
             width="229" height="40"
             alt="Welcome to the gorgeous Sedona!">
@@ -175,7 +175,7 @@
             <button class="button  feedback-form__submit-button" type="submit">Отправить отзыв</button>
 
             <div class="feedback-form__required-field-help">
-              * — обязательные поля
+              <span class="feedback-form__required-field-mark">*</span> &ndash; обязательные поля
             </div>
           </div>
         </form>
@@ -190,21 +190,21 @@
           <a class="social-links__item"
             href="https://twitter.com/hashtag/sedona" target="_blank" aria-label="Twitter">
             <svg width="19" height="15">
-              <use xlink:href='./img/sprite.svg#icon-twitter'/>
+              <use xlink:href="img/sprite.svg#icon-twitter"/>
             </svg>
           </a>
 
           <a class="social-links__item  social-links__item--facebook"
             href="https://www.facebook.com/VisitSedona/" target="_blank" aria-label="Facebook">
             <svg width="9" height="19">
-              <use xlink:href='./img/sprite.svg#icon-facebook'/>
+              <use xlink:href="img/sprite.svg#icon-facebook"/>
             </svg>
           </a>
 
           <a class="social-links__item"
             href="https://www.youtube.com/watch?v=HU22peKtyfY" target="_blank">
             <svg width="20" height="14">
-              <use xlink:href='./img/sprite.svg#icon-youtube'/>
+              <use xlink:href="img/sprite.svg#icon-youtube"/>
             </svg>
           </a>
         </div>
@@ -216,7 +216,7 @@
             aria-label="HtmlAcademy"
           >
             <svg width="27px" height="34px">
-              <use xlink:href='./img/sprite.svg#icon-logo-htmlacademy'/>
+              <use xlink:href="img/sprite.svg#icon-logo-htmlacademy"/>
             </svg>
           </a>
         </div>
