--- a/source/index.html
+++ b/source/index.html
@@ -24,9 +24,9 @@
             <li class="site-nav__item  site-nav__item--site-logo">
               <a>
                 <picture>
-                  <source media="(min-width: 1200px)" srcset="./img/logo-sedona-desktop.svg">
-                  <source media="(min-width: 768px)" srcset="./img/logo-sedona-tablet.svg">
-                  <img src="./img/logo-sedona-mobile.svg"
+                  <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+                  <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+                  <img src="img/logo-sedona-mobile.svg"
                     width="102" height="84"
                     alt="City of SEDONA (LOGO)">
                 </picture>
@@ -42,7 +42,7 @@
         </nav>
 
         <div class="site-banner-big">
-          <img src="./img/text-sedona-index.svg"
+          <img src="img/text-sedona-index.svg"
             width="281" height="314"
             class="site-banner-big__content"
             alt="Welcome to the gorgeous Sedona! Because the Grand Canyon Sucks">
@@ -76,18 +76,18 @@
           <div class="advantage-with-photo__photo">
             <picture>
               <source type="image/webp" media="(min-width: 1200px)"
-                srcset="./img/main-city-desktop@1x.webp 1x, ./img/main-city-desktop@2x.webp 2x">
+                srcset="img/main-city-desktop@1x.webp 1x, img/main-city-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 768px)"
-                srcset="./img/main-city-tablet@1x.webp 1x, ./img/main-city-tablet@2x.webp 2x">
+                srcset="img/main-city-tablet@1x.webp 1x, img/main-city-tablet@2x.webp 2x">
               <source type="image/webp"
-                srcset="./img/main-city-mobile@1x.webp 1x, ./img/main-city-mobile@2x.webp 2x">
+                srcset="img/main-city-mobile@1x.webp 1x, img/main-city-mobile@2x.webp 2x">
 
               <source media="(min-width: 1200px)"
-                srcset="./img/main-city-desktop@1x.jpg 1x, ./img/main-city-desktop@2x.jpg 2x">
+                srcset="img/main-city-desktop@1x.jpg 1x, img/main-city-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)"
-                srcset="./img/main-city-tablet@1x.jpg 1x, ./img/main-city-tablet@2x.jpg 2x">
-              <img src="./img/main-city-mobile@1x.jpg"
-                srcset="./img/main-city-mobile@2x.jpg 2x"
+                srcset="img/main-city-tablet@1x.jpg 1x, img/main-city-tablet@2x.jpg 2x">
+              <img src="img/main-city-mobile@1x.jpg"
+                srcset="img/main-city-mobile@2x.jpg 2x"
                 alt="На фото изображен сельский городок во все его сельском великолемии...">
             </picture>
           </div>
@@ -134,18 +134,18 @@
           <div class="advantage-with-photo__photo">
             <picture>
               <source type="image/webp" media="(min-width: 1200px)"
-                srcset="./img/main-bridge-desktop@1x.webp 1x, ./img/main-bridge-desktop@2x.webp 2x">
+                srcset="img/main-bridge-desktop@1x.webp 1x, img/main-bridge-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 768px)"
-                srcset="./img/main-bridge-tablet@1x.webp 1x, ./img/main-bridge-tablet@2x.webp 2x">
+                srcset="img/main-bridge-tablet@1x.webp 1x, img/main-bridge-tablet@2x.webp 2x">
               <source type="image/webp"
-                srcset="./img/main-bridge-mobile@1x.webp 1x, ./img/main-bridge-mobile@2x.webp 2x">
+                srcset="img/main-bridge-mobile@1x.webp 1x, img/main-bridge-mobile@2x.webp 2x">
 
               <source media="(min-width: 1200px)"
-                srcset="./img/main-bridge-desktop@1x.jpg 1x, ./img/main-bridge-desktop@2x.jpg 2x">
+                srcset="img/main-bridge-desktop@1x.jpg 1x, img/main-bridge-desktop@2x.jpg 2x">
               <source media="(min-width: 768px)"
-                srcset="./img/main-bridge-tablet@1x.jpg 1x, ./img/main-bridge-tablet@2x.jpg 2x">
-              <img src="./img/main-bridge-mobile@1x.jpg"
-                srcset="./img/main-bridge-mobile@2x.jpg 2x"
+                srcset="img/main-bridge-tablet@1x.jpg 1x, img/main-bridge-tablet@2x.jpg 2x">
+              <img src="img/main-bridge-mobile@1x.jpg"
+                srcset="img/main-bridge-mobile@2x.jpg 2x"
                 alt="Скала каменный мост. Силами природы возведенный каменный мост над бездонной пропастью">
             </picture>
           </div>
@@ -213,21 +213,21 @@
           <a class="social-links__item"
             href="https://twitter.com/hashtag/sedona" target="_blank" aria-label="Twitter">
             <svg width="19" height="15">
-              <use xlink:href='./img/sprite.svg#icon-twitter'/>
+              <use xlink:href="img/sprite.svg#icon-twitter"/>
             </svg>
           </a>
 
           <a class="social-links__item  social-links__item--facebook"
             href="https://www.facebook.com/VisitSedona/" target="_blank" aria-label="Facebook">
             <svg width="9" height="19">
-              <use xlink:href='./img/sprite.svg#icon-facebook'/>
+              <use xlink:href="img/sprite.svg#icon-facebook"/>
             </svg>
           </a>
 
           <a class="social-links__item"
             href="https://www.youtube.com/watch?v=HU22peKtyfY" target="_blank" aria-label="YouTube">
             <svg width="20" height="14">
-              <use xlink:href='./img/sprite.svg#icon-youtube'/>
+              <use xlink:href="img/sprite.svg#icon-youtube"/>
             </svg>
           </a>
         </div>
@@ -239,7 +239,7 @@
             aria-label="HtmlAcademy"
           >
             <svg width="27px" height="34px">
-              <use xlink:href='./img/sprite.svg#icon-logo-htmlacademy'/>
+              <use xlink:href="img/sprite.svg#icon-logo-htmlacademy"/>
             </svg>
           </a>
         </div>
