--- a/source/photo.html
+++ b/source/photo.html
@@ -7,6 +7,8 @@
     <meta name="keywords" content="[SEO]">
     <meta name="description" content="[SEO]">
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="preload" href="fonts/ptsans.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+    <link rel="preload" href="fonts/ptsansbold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
     <script>
       // Picture element HTML5 shiv
