минифицировал HTML-файлы и JS-файлы

--- a/source/form.html
+++ b/source/form.html
@@ -258,6 +258,6 @@
     <script src="./js/svg4everybody.min.js"></script>
     <script>svg4everybody();</script>
 
-    <script src="js/app.js"></script>
+    <script src="js/app.min.js"></script>
   </body>
 </html>
