--- a/source/index.html
+++ b/source/index.html
@@ -251,6 +251,6 @@
     <script src="./js/svg4everybody.min.js"></script>
     <script>svg4everybody();</script>
 
-    <script src="js/app.js"></script>
+    <script src="js/app.min.js"></script>
   </body>
 </html>
