--- a/source/form.html
+++ b/source/form.html
@@ -204,7 +204,7 @@
           </a>
 
           <a class="social-links__item"
-            href="https://www.youtube.com/watch?v=HU22peKtyfY" target="_blank">
+            href="https://www.youtube.com/watch?v=HU22peKtyfY" target="_blank" aria-label="YouTube">
             <svg width="20" height="14">
               <use xlink:href="img/sprite.svg#icon-youtube"/>
             </svg>
