--- a/source/photo.html
+++ b/source/photo.html
@@ -232,7 +232,7 @@
                 </svg>
               </button>
 
-              <div class="player__volume">
+              <div class="player__volume" aria-label="Громкость">
                 <div class="player__volume-line">
                   <div class="player__volume-knob"></div>
                 </div>
@@ -275,7 +275,7 @@
           </a>
 
           <a class="social-links__item"
-            href="https://www.youtube.com/watch?v=HU22peKtyfY" target="_blank">
+            href="https://www.youtube.com/watch?v=HU22peKtyfY" target="_blank" aria-label="YouTube">
             <svg width="20" height="14">
               <use xlink:href="img/sprite.svg#icon-youtube"/>
             </svg>
